--- a/styles/birds.scss
+++ b/styles/birds.scss
@@ -32,7 +32,7 @@
   }
 
   .bird {
-    background-image: url('../assets/birds.svg');
+    background-image: url('/public/birds.svg');
     background-size: auto 100%;
     width: 88px;
     height: 125px;
